-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.0.0-beta1
-
None
-
Debian sid
Following a2e19ba1bec09294c7588a97722195cc390ea7a3 Creator is crashing all the time...
Reverting this change solves the issue.
Full backtrace here.
The crashing thread:
1 QObjectPrivate::addConnection(int, QObjectPrivate::Connection *) 0x7ffff67234df 2 QObjectPrivate::connectImpl(QObject const *, int, QObject const *, void * *, QtPrivate::QSlotObjectBase *, Qt::ConnectionType, int const *, QMetaObject const *) 0x7ffff6724926 3 QObject::connectImpl(QObject const *, void * *, QObject const *, void * *, QtPrivate::QSlotObjectBase *, Qt::ConnectionType, int const *, QMetaObject const *) 0x7ffff6724d7a 4 ?? 0x7ffff672e238 5 QTimer::singleShotImpl(int, Qt::TimerType, QObject const *, QtPrivate::QSlotObjectBase *) 0x7ffff672e2d3 6 QTimer::singleShot<QmlJS::ModelManagerInterface::maybeQueueCppQmlTypeUpdate(const Ptr&)::<lambda()>>(int, Qt::TimerType, QObject *, QmlJS::ModelManagerInterface::<lambda()>) qtimer.h 131 0x7fffdbe5e1a7 7 QTimer::singleShot<QmlJS::ModelManagerInterface::maybeQueueCppQmlTypeUpdate(const Ptr&)::<lambda()>>(int, QObject *, QmlJS::ModelManagerInterface::<lambda()>) qtimer.h 120 0x7fffdbe5e12f 8 QmlJS::ModelManagerInterface::maybeQueueCppQmlTypeUpdate qmljsmodelmanagerinterface.cpp 1219 0x7fffdbe5b4eb 9 QmlJS::ModelManagerInterface::qt_static_metacall moc_qmljsmodelmanagerinterface.cpp 137 0x7fffdbede272 10 QMetaObject::activate(QObject *, int, int, void * *) 0x7ffff67216ca 11 CppTools::CppModelManager::documentUpdated moc_cppmodelmanager.cpp 293 0x7fffdce80c8d 12 CppTools::CppModelManager::emitDocumentUpdated cppmodelmanager.cpp 937 0x7fffdcdb2873 13 CppTools::CppModelManager::<lambda(const Ptr&)>::operator()(const CPlusPlus::Document::Ptr &) const cppmodelmanager.cpp 245 0x7fffdcdae2cf 14 std::_Function_handler<void(const QSharedPointer<CPlusPlus::Document>&), CppTools::CppModelManager::createSourceProcessor()::<lambda(const Ptr&)>>::_M_invoke(const std::_Any_data &, const QSharedPointer<CPlusPlus::Document> &) functional 1871 0x7fffdcdb4282 15 std::function<void (QSharedPointer<CPlusPlus::Document> const&)>::operator()(QSharedPointer<CPlusPlus::Document> const&) const functional 2267 0x7fffdcdc8cf7 16 CppTools::Internal::CppSourceProcessor::sourceNeeded cppsourceprocessor.cpp 504 0x7fffdcdc8029 17 CPlusPlus::Preprocessor::handleIncludeDirective pp-engine.cpp 1652 0x7fffdc9ce0d3 18 CPlusPlus::Preprocessor::handlePreprocessorDirective pp-engine.cpp 1600 0x7fffdc9cdb97 19 CPlusPlus::Preprocessor::lex pp-engine.cpp 871 0x7fffdc9ca193 20 CPlusPlus::Preprocessor::preprocess pp-engine.cpp 1413 0x7fffdc9ccbd6 21 CPlusPlus::Preprocessor::run pp-engine.cpp 758 0x7fffdc9c9a86 22 CppTools::Internal::CppSourceProcessor::sourceNeeded cppsourceprocessor.cpp 480 0x7fffdcdc7cd0 23 CPlusPlus::Preprocessor::handleIncludeDirective pp-engine.cpp 1652 0x7fffdc9ce0d3 24 CPlusPlus::Preprocessor::handlePreprocessorDirective pp-engine.cpp 1600 0x7fffdc9cdb97 25 CPlusPlus::Preprocessor::lex pp-engine.cpp 871 0x7fffdc9ca193 26 CPlusPlus::Preprocessor::preprocess pp-engine.cpp 1413 0x7fffdc9ccbd6 27 CPlusPlus::Preprocessor::run pp-engine.cpp 758 0x7fffdc9c9a86 28 CppTools::Internal::CppSourceProcessor::sourceNeeded cppsourceprocessor.cpp 480 0x7fffdcdc7cd0 29 CPlusPlus::Preprocessor::handleIncludeDirective pp-engine.cpp 1652 0x7fffdc9ce0d3 30 CPlusPlus::Preprocessor::handlePreprocessorDirective pp-engine.cpp 1600 0x7fffdc9cdb97 31 CPlusPlus::Preprocessor::lex pp-engine.cpp 871 0x7fffdc9ca193 32 CPlusPlus::Preprocessor::preprocess pp-engine.cpp 1413 0x7fffdc9ccbd6 33 CPlusPlus::Preprocessor::run pp-engine.cpp 758 0x7fffdc9c9a86 34 CppTools::Internal::CppSourceProcessor::sourceNeeded cppsourceprocessor.cpp 480 0x7fffdcdc7cd0 35 CPlusPlus::Preprocessor::handleIncludeDirective pp-engine.cpp 1652 0x7fffdc9ce0d3 36 CPlusPlus::Preprocessor::handlePreprocessorDirective pp-engine.cpp 1600 0x7fffdc9cdb97 37 CPlusPlus::Preprocessor::lex pp-engine.cpp 871 0x7fffdc9ca193 38 CPlusPlus::Preprocessor::preprocess pp-engine.cpp 1413 0x7fffdc9ccbd6 39 CPlusPlus::Preprocessor::run pp-engine.cpp 758 0x7fffdc9c9a86 40 CppTools::Internal::CppSourceProcessor::sourceNeeded cppsourceprocessor.cpp 480 0x7fffdcdc7cd0 41 CPlusPlus::Preprocessor::handleIncludeDirective pp-engine.cpp 1652 0x7fffdc9ce0d3 42 CPlusPlus::Preprocessor::handlePreprocessorDirective pp-engine.cpp 1600 0x7fffdc9cdb97 43 CPlusPlus::Preprocessor::lex pp-engine.cpp 871 0x7fffdc9ca193 44 CPlusPlus::Preprocessor::preprocess pp-engine.cpp 1413 0x7fffdc9ccbd6 45 CPlusPlus::Preprocessor::run pp-engine.cpp 758 0x7fffdc9c9a86 46 CppTools::Internal::CppSourceProcessor::sourceNeeded cppsourceprocessor.cpp 480 0x7fffdcdc7cd0 47 CPlusPlus::Preprocessor::handleIncludeDirective pp-engine.cpp 1652 0x7fffdc9ce0d3 48 CPlusPlus::Preprocessor::handlePreprocessorDirective pp-engine.cpp 1600 0x7fffdc9cdb97 49 CPlusPlus::Preprocessor::lex pp-engine.cpp 871 0x7fffdc9ca193 50 CPlusPlus::Preprocessor::preprocess pp-engine.cpp 1413 0x7fffdc9ccbd6 51 CPlusPlus::Preprocessor::run pp-engine.cpp 758 0x7fffdc9c9a86 52 CppTools::Internal::CppSourceProcessor::sourceNeeded cppsourceprocessor.cpp 480 0x7fffdcdc7cd0 53 CPlusPlus::Preprocessor::handleIncludeDirective pp-engine.cpp 1652 0x7fffdc9ce0d3 54 CPlusPlus::Preprocessor::handlePreprocessorDirective pp-engine.cpp 1600 0x7fffdc9cdb97 55 CPlusPlus::Preprocessor::lex pp-engine.cpp 871 0x7fffdc9ca193 56 CPlusPlus::Preprocessor::preprocess pp-engine.cpp 1413 0x7fffdc9ccbd6 57 CPlusPlus::Preprocessor::run pp-engine.cpp 758 0x7fffdc9c9a86 58 CppTools::Internal::CppSourceProcessor::sourceNeeded cppsourceprocessor.cpp 480 0x7fffdcdc7cd0 59 CPlusPlus::Preprocessor::handleIncludeDirective pp-engine.cpp 1652 0x7fffdc9ce0d3 60 CPlusPlus::Preprocessor::handlePreprocessorDirective pp-engine.cpp 1600 0x7fffdc9cdb97 61 CPlusPlus::Preprocessor::lex pp-engine.cpp 871 0x7fffdc9ca193 62 CPlusPlus::Preprocessor::preprocess pp-engine.cpp 1413 0x7fffdc9ccbd6 63 CPlusPlus::Preprocessor::run pp-engine.cpp 758 0x7fffdc9c9a86 64 CppTools::Internal::CppSourceProcessor::sourceNeeded cppsourceprocessor.cpp 480 0x7fffdcdc7cd0 65 CPlusPlus::Preprocessor::handleIncludeDirective pp-engine.cpp 1652 0x7fffdc9ce0d3 66 CPlusPlus::Preprocessor::handlePreprocessorDirective pp-engine.cpp 1600 0x7fffdc9cdb97 67 CPlusPlus::Preprocessor::lex pp-engine.cpp 871 0x7fffdc9ca193 68 CPlusPlus::Preprocessor::preprocess pp-engine.cpp 1413 0x7fffdc9ccbd6 69 CPlusPlus::Preprocessor::run pp-engine.cpp 758 0x7fffdc9c9a86 70 CppTools::Internal::CppSourceProcessor::sourceNeeded cppsourceprocessor.cpp 480 0x7fffdcdc7cd0 71 CPlusPlus::Preprocessor::handleIncludeDirective pp-engine.cpp 1652 0x7fffdc9ce0d3 72 CPlusPlus::Preprocessor::handlePreprocessorDirective pp-engine.cpp 1600 0x7fffdc9cdb97 73 CPlusPlus::Preprocessor::lex pp-engine.cpp 871 0x7fffdc9ca193 74 CPlusPlus::Preprocessor::preprocess pp-engine.cpp 1413 0x7fffdc9ccbd6 75 CPlusPlus::Preprocessor::run pp-engine.cpp 758 0x7fffdc9c9a86 76 CppTools::Internal::CppSourceProcessor::sourceNeeded cppsourceprocessor.cpp 480 0x7fffdcdc7cd0 77 CppTools::Internal::CppSourceProcessor::run cppsourceprocessor.cpp 186 0x7fffdcdc5c9b 78 (anonymous namespace)::index builtinindexingsupport.cpp 231 0x7fffdcd24aa4 79 (anonymous namespace)::parse builtinindexingsupport.cpp 251 0x7fffdcd24e3e 80 QtConcurrent::StoredInterfaceFunctionCall1<void, void ( *)(QFutureInterface<void>&, (anonymous namespace)::ParseParams), (anonymous namespace)::ParseParams>::run runextensions.h 115 0x7fffdcd26698 81 ?? 0x7ffff650e373 82 ?? 0x7ffff651187e 83 start_thread pthread_create.c 333 0x7ffff5fe5284 84 clone clone.S 109 0x7ffff548c97d
For Gerrit Dashboard: QTCREATORBUG-15681 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
147598,3 | Revert "QmlJS: Exchange unsafe meta calls with QTimer::singleShot" | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
147610,5 | runAsync: Fix unexpected behavior for using singleShot/timers etc | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |