tests/auto/runextensions/runextensions.pro
@@ -1,3 +1,4 @@
+QTC_LIB_DEPENDS = utils
 include(../qttest.pri)
 
 # Input
