tests/auto/runextensions/runextensions.qbs
@@ -2,7 +2,7 @@ import qbs
 
 QtcAutotest {
     name: "Run extensions autotest"
-    cpp.includePaths: base.concat(project.ide_source_tree + "/src/libs")
+    Depends { name: "Utils" }
 
     files: [
         "tst_runextensions.cpp",
